# osshell

./: ARCHITECTURE.md  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ci.yml
include/osh/: executor.hpp  history.hpp  jobs.hpp  parser.hpp  scheduler.hpp  stream.hpp  tokenizer.hpp
src/: osh.cpp  schedbench.cpp
tests/: CMakeLists.txt  check.hpp  test_executor.cpp  test_jobs.cpp  test_parser.cpp  test_scheduler.cpp  test_stream.cpp  test_tokenizer.cpp  test_v4_history.cpp
